fix error with bar on Safari mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,6 +10,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: #C7C7CD;
+}
+
+@media not all and (min-resolution:.001dpcm) {
+  @supports (-webkit-appearance:none) {
+    @media (max-width: 812px) {
+      body {
+        height: calc(100vh - 65px);
+      }
+    }
+  }
 }
 
 #root {
